--- a/app/templates/instagram_user_parser/index.html.twig
+++ b/app/templates/instagram_user_parser/index.html.twig
@@ -1,4 +1,11 @@
+{% extends 'base.html.twig' %}
+
+{% block title %}Rand index{% endblock %}
+
+{% block body %}
+    <h1>Rand index</h1>
 
 
 
 
+{% endblock %}
