--- a/app/templates/instagram_user_parser/index.html.twig
+++ b/app/templates/instagram_user_parser/index.html.twig
@@ -1,13 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Parse index{% endblock %}
-{% block head_css %}
-    <!-- Copy CSS from https://getbootstrap.com/docs/4.4/getting-started/introduction/#css -->
-{% endblock %}
-{% block head_js %}
-    <!-- Copy JavaScript from https://getbootstrap.com/docs/4.4/getting-started/introduction/#js -->
-{% endblock %}
-
 
 {% block body %}
     <h1>Parse index</h1>
@@ -21,9 +14,8 @@
         {# Click to parse and save to db #}
 
 
-
     {# Display #}
-    <table class="table table-striped mb-3">
+    <table class="w-auto table table-bordered m-3">
         <thead class="thead-dark">
             <tr>
                 <th>Profile Picture</th>
@@ -47,7 +39,7 @@
                     {% for post in user.posts %}
                         <td>
                             {% for postVisual in  post.postVisuals %}
-                                <img width="80" height="60" class="img-fluid" src="/{{ postVisual.path }}" alt="https://kravmaganewcastle.com.au/wp-content/uploads/2017/04/default-image.jpg">
+                                <img width="80" height="60" class="m-3 img-fluid" src="/{{ postVisual.path }}" alt="https://kravmaganewcastle.com.au/wp-content/uploads/2017/04/default-image.jpg">
                             {% endfor %}
                             <br>
                             {% if post.text == false %}
