--- a/app/templates/instagram_user_parser/index.html.twig
+++ b/app/templates/instagram_user_parser/index.html.twig
@@ -5,13 +5,30 @@
 {% block body %}
     <div class="m-3 border border-primary">
 
+
+
         {# Parse #}
+        <div class="container mb-3">
+            <div class="row m-3">
+                <div class="col-sm m-3">
+                    <form class="m-3">
+                        <div class="form-group">
+                            <label for="inputUsername">Username to parse</label>
+                            <input type="password" class="form-control" id="inputUsername" placeholder="Username">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
 
-        {# Inpyt instgram username #}
 
 
 
-        {# Click to parse and save to db #}
+
+
+
+
 
 
 
