--- a/app/templates/components/instagram_user_form.html.twig
+++ b/app/templates/components/instagram_user_form.html.twig
@@ -5,7 +5,7 @@
         {{ form_row(this.form.username) }}
 
         <button
-                class="btn btn-secondary"
+                class="btn btn-secondary mb-3"
                 data-loading="addAttribute(disabled)"
         >{{ buttonLabel }}</button>
 
