--- a/app/templates/instagram_user_parser/index.html.twig
+++ b/app/templates/instagram_user_parser/index.html.twig
@@ -3,74 +3,10 @@
 {% block title %}Parse index{% endblock %}
 
 {% block body %}
-    <div class="m-3 border border-primary">
         <a class="m-2" href="{{ path('app_instagram_new') }}">parse new user</a>
 
         {# Display #}
         {% for user in users %}
-            <div class="container mb-3">
-                <div class="row m-3">
-                    <div class="col-sm m-3">
-                        <table class="table table-primary m-3">
-                            <thead>
-                            <tr>
-                                <th scope="col">Profile Image</th>
-                                <th scope="col">Name</th>
-                                <th scope="col">Username</th>
-                                <th scope="col">Profile Description</th>
-                            </tr>
-                            </thead>
-                            <tbody class="mb-4">
-                            <tr>
-                                <td>
-                                    {% for visual in user.visuals %}
-                                        <img width="95" height="95" class="rounded img-fluid" src="/{{ visual.path }}"
-                                             alt="/data/blank-avatar.png">
-                                    {% endfor %}
-                                </td>
-                                <td>{{ user.name }}</td>
-                                <td>{{ user.username }}</td>
-                                <td>
-                                    {% if user.description == false %}
-                                        None
-                                    {% endif %}
-                                    {{ user.description }}
-                                </td>
-                            </tr>
-                            </tbody>
-
-                            <thead>
-                            <tr>
-                                <th scope="col">Post Images</th>
-                                <th scope="col">Post Text</th>
-                            </tr>
-                            </thead>
-
-                            {% for post in user.posts %}
-                                <tbody class="mb-4">
-                                <tr>
-                                    <td>
-                                        {% for postVisual in  post.postVisuals %}
-                                            <img width="95" height="95" class="rounded img-fluid"
-                                                 src="/{{ postVisual.path }}"
-                                                 alt="https://kravmaganewcastle.com.au/wp-content/uploads/2017/04/default-image.jpg">
-                                        {% endfor %}
-                                    </td>
-                                    <td>
-                                        {% if post.text == false %}
-                                            No text
-                                        {% endif %}
-                                        {{ post.text }}
-                                    </td>
-                                </tr>
-                                </tbody>
-                            {% endfor %}
-
-                        </table>
-                    </div>
-                </div>
-            </div>
+            {{ include('instagram_user_parser/table.html.twig') }}
         {% endfor %}
-    </div>
-
 {% endblock %}
