--- a/app/templates/instagram_user_parser/new.html.twig
+++ b/app/templates/instagram_user_parser/new.html.twig
@@ -1,26 +1,12 @@
 {% extends 'base.html.twig' %}
 
+{% use 'instagram_user_parser/center_div.html.twig' %}
+
 {% block title %}New Instagram User{% endblock %}
 
 {% block body %}
-    <div class="m-3 border border-primary">
         <a class="m-2" href="{{ path('app_instagram_index') }}">back to list</a>
 
         {# Parse #}
-        <div class="container mb-3">
-            <div class="row m-3">
-                <div class="col-sm m-3">
-                    <div class="m-3">
-
-                        {{ component('instagram_user_form', {
-                            form: form
-                        }) }}
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
+        {{ include('instagram_user_parser/instagram_user_form_center.html.twig') }}
 {% endblock %}
