parser ui 2 clean up

--- a/app/templates/components/instagram_user_form.html.twig
+++ b/app/templates/components/instagram_user_form.html.twig
@@ -1,4 +1,4 @@
-<div class="form-group" data-action="change->live#update">
+<div class="m-3 form-group" data-action="change->live#update">
 
     {{ form_start(this.form) }}
 
