--- a/app/templates/instagram_user_parser/table.html.twig
+++ b/app/templates/instagram_user_parser/table.html.twig
@@ -1,7 +1,7 @@
 {% extends 'instagram_user_parser/center_div.html.twig' %}
 
 {% block center_div %}
-    <table class="table table-primary m-3">
+    <table class="table table-dark table-primary m-3">
         <thead>
         <tr>
             <th scope="col">Profile Image</th>
