parser ui 3 more clean up | needs rabbitmq

--- a/app/templates/instagram_user_parser/index.html.twig
+++ b/app/templates/instagram_user_parser/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Parse index{% endblock %}
 
 {% block body %}
-        <a class="m-2" href="{{ path('app_instagram_new') }}">parse new user</a>
+        <a class="m-2" href="{{ path('app_instagram_new') }}">Parse New User</a>
 
         {# Display #}
         {% for user in users %}
