--- a/app/templates/components/instagram_user_form.html.twig
+++ b/app/templates/components/instagram_user_form.html.twig
@@ -6,6 +6,7 @@
 
         <button
                 class="btn btn-secondary mb-3"
+                data-action-name="debounce(1000)"
                 data-loading="addAttribute(disabled)"
         >{{ buttonLabel }}</button>
 
