--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -13,9 +13,12 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <style type="text/css">
+            body { background-color:#424952; }
+        </style>
     </head>
     <body>
-        <div class="m-3 border border-primary">
+        <div class="m-3 bg-dark border border-primary">
 
             {% block body %}{% endblock %}
         </div>
