--- a/app/templates/components/instagram_user_form.html.twig
+++ b/app/templates/components/instagram_user_form.html.twig
@@ -4,8 +4,14 @@
 
         {{ form_row(this.form.username) }}
 
+        <div class="bg-white m-1">
+                <div class="m-2">
+                      {{ form_errors(this.form) }}
+                </div>
+        </div>
+
         <button
-                class="btn btn-secondary mb-3"
+                class="btn btn-primary m-1"
                 data-action-name="debounce(1000)"
                 data-loading="addAttribute(disabled)"
         >{{ buttonLabel }}</button>
